--- a/www/pages/forgot-pass/forgot-pass.html
+++ b/www/pages/forgot-pass/forgot-pass.html
@@ -2,36 +2,29 @@
   <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
     <div class="spacer" style="width: 300px; height: 25px;"></div>
 
-      <div>
-          <img src="img/freemig_icon.png" style="display: block; width: 25%; height: auto; margin-left: auto; margin-right: auto; margin-top:30px; margin-bottom:30px;">
-      </div>
+      <div style="margin:10px">
+              <div>
+                  <img src="img/freemig_icon.png" style="display: block; width: 50%; height: auto; margin-left: auto; margin-right: auto; margin-top:30px; margin-bottom:30px;">
+              </div>
 
-      <div class="spacer" style="width: 300px; height: 25px;"></div>
+              <div class="spacer" style="width: 300px; height: 25px;"></div>
 
-      <form id="forgotPass-form4" class="list">
+              <form id="forgotPass-form4" class="list">
 
-      <label class="item item-input"  style="border-radius:25px; border-width: 2px; border-style: solid; border-color:#ffffff; background-color: transparent;" >
-              <i class="icon ion-ios-person placeholder-icon" style="color:#ffffff; font-size:20px"></i>
-              <input type="text" placeholder="Email Address" style="color:white; padding-bottom:2px; font-size:14px;" ng-model="">
-      </label>
+                  <!--Email Address -->
+                      <label class="item item-input"  style="border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;" >
+                              <i class="icon ion-ios-person placeholder-icon" style="color:#37c673; font-size:20px"></i>
+                              <input type="text" placeholder="Email Address" style="color:#0b883f; padding-bottom:2px; font-size:14px;">
+                      </label>
+              </form>
 
+              <!--submit button -->
+              <button  class="button button-light  button-block" style="border-radius: 10px;color:#0b883f">Submit</button>
 
-    <!-- <label class="item item-input item-floating-label " id="signin-input1">
-            <span class="input-label" style="color:#DDDDDD;font-size:10px">Email</span>
-            <input type="text" placeholder="Email" style="color:white;padding-bottom:20px;font-size:17px">
-    </label> -->
-
-      <!-- <label class="item item-input" name="username">
-        <input type="text" placeholder="Username/Email">
-      </label> -->
-
-      </form>
-
-      <button  class="button button-light  button-block" style="border-radius: 25px;">Submit</button>
-
-      <div id="forgotPass-button-bar3" class="button-bar">
-           <button ui-sref="signup" id="forgotPass-button13" class="button button-light button-small button-block button-clear">Create Account</button>
-           <button ui-sref="signin" id="forgotPass-button14" class="button button-light button-small button-block button-clear">Sign In</button>
+              <div class="button-bar"  style="margin-left:-15%">
+                   <button ui-sref="signup" class="button button-light button-small button-block button-clear"><b>Create Account<b></button>
+                   <button ui-sref="signin" class="button button-light button-small button-block button-clear"><b>Sign In<b></button>
+              </div>
       </div>
 
   </ion-content>
