--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -13,9 +13,9 @@
 
 <!-- Username-->
         <div class="list">
-                <label class="item item-input"  style="border-radius:25px; border-width: 2px; border-style: solid; border-color:#ffffff; background-color: transparent;" >
-                        <i class="icon ion-ios-person placeholder-icon" style="color:#ffffff; font-size:20px"></i>
-                        <input type="text" placeholder="User Name" style="color:white; padding-bottom:2px; font-size:14px;" ng-model="vm.signinData.username">
+                <label class="item item-input"  style="border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;" >
+                        <i class="icon ion-ios-person placeholder-icon" style="color:#37c673; font-size:20px"></i>
+                        <input type="text" placeholder="User Name" style="color:#0b883f; padding-bottom:2px; font-size:14px;" ng-model="vm.signinData.username">
                 </label>
         </div>
 
@@ -25,10 +25,10 @@
       </label> -->
 
 <!-- password-->
-                <label class="item item-input" style="margin-top:-5px; border-radius:25px; border-width: 2px; border-style: solid; border-color:#ffffff; background-color: transparent;">
-                        <i class="icon icon-left ion-ios-locked placeholder-icon" style="color:#ffffff; font-size:20px"></i>
-                        <input type="password" placeholder="Password" style="color:white; padding-bottom:2px; font-size:14px" ng-model="vm.signinData.password">
-                        <i class="icon icon-right ion-eye placeholder-icon" style="color:#bababa; padding-right:15px"></i>
+                <label class="item item-input" style="margin-top:-5px; border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;">
+                        <i class="icon icon-left ion-ios-locked placeholder-icon" style="color:#37c673; font-size:20px"></i>
+                        <input type="password" placeholder="Password" style="color:#0b883f; padding-bottom:2px; font-size:14px" ng-model="vm.signinData.password">
+                        <i class="icon icon-right ion-eye-disabled placeholder-icon" style="color:#728078; padding-right:15px"></i>
                 </label>
 
 
@@ -38,7 +38,7 @@
       </label> -->
 
 
-      <button ng-click="vm.signin()" class="button button-light button-block" style="border-radius: 25px;"><span style="color:#22c064">Sign In</span></button>
+      <button ng-click="vm.signin()" class="button button-light button-block" style="border-radius: 10px;"><span style="color:#22c064">Sign In</span></button>
 
 
     </form>
