April 15 mid day

--- a/www/pages/menu.html
+++ b/www/pages/menu.html
@@ -45,7 +45,7 @@
 
         <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-gear-a" style="font-size:20px"></i>Settings</a>
 
-        <a class="item item-icon-left" menu-close ui-sref="app.tabs.home"><i class="icon ion-log-out" style="font-size:20px"></i>Logout</a>
+        <a class="item item-icon-left" menu-close ng-click="vm.logout()"><i class="icon ion-log-out" style="font-size:20px"></i>Logout</a>
 
       </ion-list>
     </ion-content>
