--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -80,9 +80,20 @@
 <!-- basic info -->
               <div style="margin-top:10px">
 
+                <!--basic info-->
+                      <div class="row item item-borderless">
+                        <div class="col col-100">
+                          <div style="text-align:center; color:#22c064">Basic Information</div>
+                        </div>
+                      </div>
+
+
                   <div class="row item item-borderless">
-                        <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
-                        <p class="col col-80"><span class="information">{{vm.widgetInfo.genrelInfo.about.name}}</span></p>
+                        <!-- <a class="col col-10 col-offset-10"><i class="icon ion-android-person"></i></a> -->
+                        <div class="col" style="padding-left:10px">
+                            <p style="margin-bottom:-25px; font-size:10px">about</p><br>
+                            <span class="information">{{vm.widgetInfo.genrelInfo.about.name}}</span>
+                        </div>
                   </div>
 
 
@@ -150,7 +161,7 @@
                         </a>
                   </div>
 
-                  <div class="row item item-borderless">
+                  <div class="row item item-borderless item-text-wrap">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.quote.name!==''">
                             <span class="information" >Favourite Quote:<br> {{vm.widgetInfo.genrelInfo.quote.name}}</span>
