--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -78,96 +78,162 @@
 
 
 <!-- basic info -->
-              <div style="margin-top:10px">
+              <div class="card" style="margin-top:10px">
+                <div class="item item-text-wrap">
 
                 <!--basic info-->
                       <div class="row item item-borderless">
-                        <div class="col col-100">
-                          <div style="text-align:center; color:#22c064">Basic Information</div>
+                        <div class="col">
+                          <div style="padding:10px 0 15px 0; text-align:center; color:#22c064">Basic Information</div>
                         </div>
                       </div>
 
-
+                <!--about-->
                   <div class="row item item-borderless">
                         <!-- <a class="col col-10 col-offset-10"><i class="icon ion-android-person"></i></a> -->
-                        <div class="col" style="padding-left:10px">
-                            <p style="margin-bottom:-25px; font-size:10px">about</p><br>
+                        <div class="col">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">about</p><br>
                             <span class="information">{{vm.widgetInfo.genrelInfo.about.name}}</span>
                         </div>
                   </div>
 
-
+                <!--profession-->
                   <div class="row item item-borderless">
-                        <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
-                        <a ng-repeat="w in vm.widgetInfo.work" class="col col-80">
+                        <a ng-repeat="w in vm.widgetInfo.work" class="col">
+                             <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Profession</p><br>
                              <span class="information">{{w.title}} @ {{w.org_name}}</span>
                              <span class="information" ng-show="w.wto!==''">Worked @ {{w.org_name}} as {{w.title}}</span>
                         </a>
                   </div>
 
+                  <!-- <div class="row item item-borderless">
+                        <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
+                        <a ng-repeat="w in vm.widgetInfo.work" class="col col-80">
+                             <span class="information">{{w.title}} @ {{w.org_name}}</span>
+                             <span class="information" ng-show="w.wto!==''">Worked @ {{w.org_name}} as {{w.title}}</span>
+                        </a>
+                  </div> -->
+
+                  <!--Home Town-->
                   <div class="row item item-borderless">
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.home_town.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Home Town</p><br>
+                            <span class="information">{{vm.widgetInfo.genrelInfo.home_town.name}}</span>
+                        </a>
+                  </div>
+                  <!-- <div class="row item item-borderless">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.home_town.name!==''">
                             <span class="information">From {{vm.widgetInfo.genrelInfo.home_town.name}}</span>
                         </a>
-                  </div>
+                  </div> -->
 
+                  <!--Date of Birth-->
                   <div class="row item item-borderless">
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.dob.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Date of Birth</p><br>
+                            <span class="information">{{vm.widgetInfo.genrelInfo.dob.name}}</span>
+                        </a>
+                  </div>
+                  <!-- <div class="row item item-borderless">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.dob.name!==''">
                             <span class="information">Birthdate: {{vm.widgetInfo.genrelInfo.dob.name}}</span>
                         </a>
-                  </div>
+                  </div> -->
 
+
+                  <!-- interest-->
                   <div class="row item item-borderless">
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.interest.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Interested In</p><br>
+                            <span class="information" >{{vm.widgetInfo.genrelInfo.interest.name}}</span>
+                        </a>
+                  </div>
+                  <!-- <div class="row item item-borderless">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.interest.name!==''">
                             <span class="information" >Interested In: {{vm.widgetInfo.genrelInfo.interest.name}}</span>
                         </a>
-                  </div>
+                  </div> -->
 
+                  <!--language-->
                   <div class="row item item-borderless">
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.interest.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Language</p><br>
+                          <span class="information" >{{vm.widgetInfo.genrelInfo.lang.name}}</span>
+                        </a>
+                  </div>
+                  <!-- <div class="row item item-borderless">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.interest.name!==''">
                           <span class="information" >Knows: {{vm.widgetInfo.genrelInfo.lang.name}}</span>
                         </a>
-                  </div>
+                  </div> -->
 
+
+                  <!--phone-->
                   <div class="row item item-borderless">
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.phone.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Phone</p><br>
+                            <span class="information" >{{vm.widgetInfo.genrelInfo.phone.name}}</span>
+                        </a>
+                  </div>
+                  <!-- <div class="row item item-borderless">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.phone.name!==''">
                             <span class="information" >Phone: {{vm.widgetInfo.genrelInfo.phone.name}}</span>
                         </a>
-                  </div>
+                  </div> -->
 
+
+                  <!--relationship status-->
                   <div class="row item item-borderless">
-                        <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
-                        <a class="icol col-80" ng-if="vm.widgetInfo.genrelInfo.relation.name!==''">
-                            <span class="information" >Relationship Status: {{vm.widgetInfo.genrelInfo.relation.name}}</span>
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.relation.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Relationship Status</p><br>
+                            <span class="information" >{{vm.widgetInfo.genrelInfo.relation.name}}</span>
                         </a>
                   </div>
 
+
+                  <!--religious view-->
                   <div class="row item item-borderless">
-                        <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
-                        <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.religion.name!==''">
-                            <span class="information" >Religious View: {{vm.widgetInfo.genrelInfo.religion.name}}</span>
+                        <a class="col" ng-if="vm.widgetInfo.genrelInfo.religion.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Religious View</p><br>
+                            <span class="information" >{{vm.widgetInfo.genrelInfo.religion.name}}</span>
                         </a>
                   </div>
 
+                  <!--website-->
                   <div class="row item item-borderless">
+                        <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.website.name!==''">
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Website</p><br>
+                            <span class="information" >{{vm.widgetInfo.genrelInfo.website.name}}</span>
+                        </a>
+                  </div>
+                  <!-- <div class="row item item-borderless">
                         <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.website.name!==''">
                             <span class="information" >Website: {{vm.widgetInfo.genrelInfo.website.name}}</span>
                         </a>
-                  </div>
+                  </div> -->
 
-                  <div class="row item item-borderless item-text-wrap">
-                        <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
+                  <!--fav quote-->
+                  <div class="row item item-borderless">
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.quote.name!==''">
-                            <span class="information" >Favourite Quote:<br> {{vm.widgetInfo.genrelInfo.quote.name}}</span>
+                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Favourite Quote</p><br>
+                            <span class="information" >{{vm.widgetInfo.genrelInfo.quote.name}}</span>
                         </a>
-                </div>
+                 </div>
+                 <!-- <div class="row item item-borderless item-text-wrap">
+                       <a class="col col-10 col-offset-10"><i class="icon ion-images"></i></a>
+                       <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.quote.name!==''">
+                           <span class="information" >Favourite Quote:<br> {{vm.widgetInfo.genrelInfo.quote.name}}</span>
+                       </a>
+                </div> -->
 
+
+                 </div>
               </div>
 
 
