--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -89,10 +89,10 @@
                       </div>
 
                 <!--about-->
-                  <div class="row item item-borderless">
+                  <div class="row item">
                         <!-- <a class="col col-10 col-offset-10"><i class="icon ion-android-person"></i></a> -->
                         <div class="col">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">about</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">about</p><br>
                             <span class="information">{{vm.widgetInfo.genrelInfo.about.name}}</span>
                         </div>
                   </div>
@@ -100,7 +100,7 @@
                 <!--profession-->
                   <div class="row item item-borderless">
                         <a ng-repeat="w in vm.widgetInfo.work" class="col">
-                             <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Profession</p><br>
+                             <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Profession</p><br>
                              <span class="information">{{w.title}} @ {{w.org_name}}</span>
                              <span class="information" ng-show="w.wto!==''">Worked @ {{w.org_name}} as {{w.title}}</span>
                         </a>
@@ -117,7 +117,7 @@
                   <!--Home Town-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.home_town.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Home Town</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Home Town</p><br>
                             <span class="information">{{vm.widgetInfo.genrelInfo.home_town.name}}</span>
                         </a>
                   </div>
@@ -131,7 +131,7 @@
                   <!--Date of Birth-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.dob.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Date of Birth</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Date of Birth</p><br>
                             <span class="information">{{vm.widgetInfo.genrelInfo.dob.name}}</span>
                         </a>
                   </div>
@@ -146,7 +146,7 @@
                   <!-- interest-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.interest.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Interested In</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Interested In</p><br>
                             <span class="information" >{{vm.widgetInfo.genrelInfo.interest.name}}</span>
                         </a>
                   </div>
@@ -160,7 +160,7 @@
                   <!--language-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.interest.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Language</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Language</p><br>
                           <span class="information" >{{vm.widgetInfo.genrelInfo.lang.name}}</span>
                         </a>
                   </div>
@@ -175,7 +175,7 @@
                   <!--phone-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.phone.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Phone</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Phone</p><br>
                             <span class="information" >{{vm.widgetInfo.genrelInfo.phone.name}}</span>
                         </a>
                   </div>
@@ -190,7 +190,7 @@
                   <!--relationship status-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.relation.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Relationship Status</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Relationship Status</p><br>
                             <span class="information" >{{vm.widgetInfo.genrelInfo.relation.name}}</span>
                         </a>
                   </div>
@@ -199,7 +199,7 @@
                   <!--religious view-->
                   <div class="row item item-borderless">
                         <a class="col" ng-if="vm.widgetInfo.genrelInfo.religion.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Religious View</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Religious View</p><br>
                             <span class="information" >{{vm.widgetInfo.genrelInfo.religion.name}}</span>
                         </a>
                   </div>
@@ -207,7 +207,7 @@
                   <!--website-->
                   <div class="row item item-borderless">
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.website.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Website</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Website</p><br>
                             <span class="information" >{{vm.widgetInfo.genrelInfo.website.name}}</span>
                         </a>
                   </div>
@@ -221,7 +221,7 @@
                   <!--fav quote-->
                   <div class="row item item-borderless">
                         <a class="col col-80" ng-if="vm.widgetInfo.genrelInfo.quote.name!==''">
-                            <p style="margin-bottom:-25px; font-size:12px; color: #22c064;">Favourite Quote</p><br>
+                            <p style="margin-bottom:-25px; font-size:8px; color: #22c064;">Favourite Quote</p><br>
                             <span class="information" >{{vm.widgetInfo.genrelInfo.quote.name}}</span>
                         </a>
                  </div>
@@ -239,10 +239,13 @@
 
 
 
-<!-- connections list -->
-
-
-      <div style="padding-top:20px">
+     <!--Activities-->
+             <div class="card">
+                  <div class="item item-text-wrap">
+                    This is a basic Card which contains an item that has wrapping text.
+                  </div>
+             </div>
+      <!-- <div style="padding-top:20px">
 
           <div class="row item item-borderless">
               <div class="col col-33" style="padding-left:10%">
@@ -303,20 +306,8 @@
 
           <button class="button button-block button-light"><span style="color:#11a74a">See All Connections</span></button>
 
-    </div>
-
-
-
-
-
-
-<!-- photo gallery -->
-
-
-
-
-
-
+    </div>-->
+    <!--activities-->
 
 
 
