--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -6,8 +6,11 @@
         </ion-nav-back-button>
 
         <ion-nav-buttons side="left">
-            <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
+            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+        </ion-nav-buttons>
+
+        <ion-nav-buttons side="right">
+            <button class="button button-icon button-clear ion-edit"></button>
         </ion-nav-buttons>
 
     </ion-nav-bar>
