--- a/www/pages/signin/signin.html
+++ b/www/pages/signin/signin.html
@@ -1,8 +1,8 @@
-<ion-view title="signin" hide-nav-bar="true" hide-back-button="true" id="page4" >
+<ion-view title="signin" hide-nav-bar="true" hide-back-button="true" id="page4">
   <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
     <div class="spacer" style="width: 300px; height: 25px;"></div>
 
-<!--freemig icon-->
+    <!--freemig icon-->
     <div>
       <img src="img/freemig_icon.png" style="display: block; width: 50%; height: auto; margin-left: auto; margin-right: auto; margin-bottom:40px; margin-top:40px">
     </div>
@@ -11,26 +11,27 @@
 
     <form name="signinForm" novalidate class="list" style="margin:5%">
 
-<!-- Username-->
-        <div class="list">
-                <label class="item item-input"  style="border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;" >
+      <!-- Username-->
+      <div class="list">
+        <label class="item item-input" style="border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;">
                         <i class="icon ion-ios-person placeholder-icon" style="color:#37c673; font-size:20px"></i>
                         <input type="text" placeholder="User Name" style="color:#0b883f; padding-bottom:2px; font-size:14px;" ng-model="vm.signinData.username">
                 </label>
-        </div>
+      </div>
 
       <!-- <label class="item item-input item-floating-label " id="signin-input1">
           <span class="input-label" style="color:#DDDDDD; font-size:10px">User Name</span>
           <input type="text" placeholder="User Name" style="color:white;padding-bottom:20px;font-size:17px;" ng-model="vm.signinData.username">
       </label> -->
 
-<!-- password-->
-                <div class="item item-input" style="margin-top:-5px; border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;">
-                        <i class="icon icon-left ion-ios-locked placeholder-icon" style="color:#37c673; font-size:20px"></i>
-                        <input type="{{vm.inputType}}" placeholder="Password" style="color:#0b883f; padding-bottom:2px; font-size:14px" ng-model="vm.signinData.password">
-                        <i ng-if="vm.inputType == 'password'" ng-click="vm.hideShowPassword()" class="icon icon-right ion-eye placeholder-icon" style="color:#728078; padding-right:15px"></i>
-                        <i ng-click="vm.hideShowPassword()" ng-if="vm.inputType == 'text'" class="icon icon-right ion-eye-disabled placeholder-icon" style="color:#728078; padding-right:15px"></i>
-                </div>
+      <!-- password-->
+      <div class="item item-input" style="margin-top:-5px; border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;">
+        <i class="icon icon-left ion-ios-locked placeholder-icon" style="color:#37c673; font-size:20px"></i>
+        <input type="{{vm.inputType}}" placeholder="Password" style="color:#0b883f; padding-bottom:2px; font-size:14px" ng-model="vm.signinData.password">
+        <i ng-if="vm.inputType == 'password'" ng-click="vm.hideShowPassword()" class="icon icon-right ion-eye placeholder-icon" style="color:#728078; padding-right:15px"></i>
+        <i ng-click="vm.hideShowPassword()" ng-if="vm.inputType == 'text'" class="icon icon-right ion-eye-disabled placeholder-icon"
+          style="color:#728078; padding-right:15px"></i>
+      </div>
 
 
       <!-- <label class="item item-input item-floating-label" id="signin-input1">
@@ -45,7 +46,7 @@
     </form>
 
     <div class="button-bar" style="margin-left:-10%">
-      <button ui-sref="signup"  class="button button-light button-small button-block button-clear"><b>Create Account<b></button>
+      <button ui-sref="signup" class="button button-light button-small button-block button-clear"><b>Create Account<b></button>
       <button ui-sref="forgot-pass" class="button button-light button-small button-block button-clear"><b>Forgot Password?<b></button>
     </div>
   </ion-content>
