--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -240,9 +240,34 @@
 
 
      <!--Activities-->
-             <div class="card">
+             <div class="card" style="margin-top:-10px">
                   <div class="item item-text-wrap">
-                    This is a basic Card which contains an item that has wrapping text.
+
+                    <!--activities-->
+                          <div class="row item item-borderless">
+                            <div class="col">
+                              <div style="padding:10px 0 15px 0; text-align:center; color:#22c064">Activities</div>
+                            </div>
+                          </div>
+
+
+                          <div class="row">
+                              <div class="col">
+                                 <div class="circle">
+                                 </div>
+                              </div>
+
+                              <div class="col">
+                                 <div class="circle">
+                                 </div>
+                              </div>
+
+                              <div class="col">
+                                 <div class="circle">
+                                 </div>
+                              </div>
+                          </div>
+
                   </div>
              </div>
       <!-- <div style="padding-top:20px">
