--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -257,12 +257,16 @@
                           <div class="row">
                               <div class="col">
                                  <div class="circle">
-                                 </div>
+                                   <i class="icon ion-images"></i>
+                                 </div> photos
                               </div>
 
                               <div class="col">
-                                 <div class="circle">
-                                 </div>
+                                  <span class="fa-stack fa-2x">
+                                      <i class="fa  fa-circle fa-stack-2x circle-shape"></i>
+                                      <i class="ion-ios-videocam fa-stack-1x" style="color:#22c064"></i>
+                                  </span>
+                                  <p>Videos</p>
                               </div>
 
                               <div class="col">
