April 18th mid day

--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -28,7 +28,7 @@
     </ion-segment>
   </div>
 
-  <ion-content padding="true" class="has-subheader">
+  <ion-content padding="true" class="has-tabs-top has-subheader">
 
     <ion-refresher
       pulling-text="Pull to refresh..."
