--- a/www/pages/popovers/home-feed-post-edit.html
+++ b/www/pages/popovers/home-feed-post-edit.html
@@ -5,7 +5,7 @@
         <div>
           <button class="button no-padding button-positive button-small button-clear icon icon-left ion-edit"><span style="padding-left:5px">Edit</span></button>
           <button class="button button-positive button-small button-clear icon icon-left ion-trash-a"><span style="padding-left:6px">Remove</span></button>
-          <button class="button button-positive button-small button-clear icon icon-left fa fa-bookmark-o"><span style="padding-left:6px">Save</span></button>
+          <button ng-click="vm.saveThisPost()" class="button button-positive button-small button-clear icon icon-left fa fa-bookmark-o"><span style="padding-left:6px">Save</span></button>
         </div>
 
 
