--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -30,8 +30,12 @@
             <div id="content">
                 <div id="profile-info">
 
-                  <div class="row">
-                        <img ng-src="{{vm.proPic}}" id="profile-image">
+                  <div>
+                    <div class="profile_image" style="background-image: url(http://csshexagon.com/img/meow.jpg)">
+                       <div class="pp-top"></div>
+                       <div class="pp-Bottom"></div>
+                    </div>
+                        <!-- <img ng-src="{{vm.proPic}}" id="profile-image"> -->
                         <!-- <button id="pro-pic-edit" class="button button-light button-clear icon ion-camera"></button>  -->
 
                         <h4 id="profile-name">{{vm.user.full_name}}</h4>
